--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,3 @@
-spring.application.name=gestor-citas
-
-spring.datasource.url=jdbc:mysql://localhost:3306/gestcitas
-spring.datasource.username=root
-spring.datasource.password=
-
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+server.port=${PORT:8080}
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-
-spring.jpa.properties.hibernate.jdbc.time_zone=UTC
