--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,12 @@
 			<version>7.0.21</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+    <groupId>org.postgresql</groupId>
+    <artifactId>postgresql</artifactId>
+    <scope>runtime</scope>
+</dependency>
+
 	</dependencies>
 
 	<build>
